# CodenamePedestrian

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: build-html5.yaml  build-native.yaml  build.yaml
src/: background.hpp  camera.hpp  defs.hpp  lane.hpp  main.cpp  score.hpp  sounds.cpp  sounds.hpp  sprites.cpp  sprites.hpp
src/entities/: base.cpp  base.hpp  car.cpp  car.hpp  pedo.cpp  pedo.hpp
src/runner/: draw.cpp  restart.cpp  update.cpp
